bases/teddit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teddit
spec:
  replicas: 1  # Adjust as needed
  selector:
    matchLabels:
      app: teddit
  template:
    metadata:
      labels:
        app: teddit
    spec:
      containers:
        - name: teddit
          image: teddit/teddit:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: teddit
spec:
  type: LoadBalancer
  selector:
    app: teddit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
