bases/teddit/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teddit-redis
spec:
  replicas: 1  # Adjust as needed
  selector:
    matchLabels:
      app: teddit-redis
  template:
    metadata:
      labels:
        app: teddit-redis
    spec:
      containers:
        - name: teddit-redis
          image: redis:6.2.5-alpine
          command: ["redis-server"]
---
apiVersion: v1
kind: Service
metadata:
  name: teddit-redis
spec:
  selector:
    app: teddit-redis
  ports:
    - protocol: TCP
      port: 6379  # Default Redis port
